# RionID

./: 404.html  CITATION.cff  gen_doc_stubs.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: deploy.yml
docs/: index.md
reference/rionid/: index.html
reference/rionid/__main__/: index.html
reference/rionid/baseline/: index.html
reference/rionid/core/: index.html
reference/rionid/gui/: index.html
reference/rionid/gui/app/: index.html
reference/rionid/gui/controller/: index.html
reference/rionid/gui/dialogs/: index.html
reference/rionid/gui/inputs/: index.html
reference/rionid/gui/plot/: index.html
reference/rionid/io/: index.html
reference/rionid/version/: index.html
rionidgui/: __main__.py  gui.py
search/: search_index.json
src/rionid/: __init__.py  __main__.py  baseline.py  core.py  io.py  version.py
src/rionid/gui/: app.py  controller.py  dialogs.py  inputs.py  plot.py
