[tool.poetry]
name = "rionid"
version = "1.0.0"
description = "Ring-stored ion IDentification: A pure Python tool for Schottky spectrum analysis."
authors = ["David Freire-Fernández <D.FreireFernandez@gsi.de>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://gsi-nuclear-astrophysics.github.io/rionid/"
repository = "https://github.com/GSI-Nuclear-Astrophysics/rionid"
keywords = ["Physics", "Nuclear Physics", "Storage Rings", "Mass Spectrometry", "Schottky"]

# Recursively include everything in src/rionid
packages = [
    { include = "rionid", from = "src" }
]

# Ensure mass tables inside the vendorized barion are packaged
include = [
    "src/rionid/external/barion/*.mas20",
    "src/rionid/external/barion/data/*"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "*"
scipy = "*"
PyQt5 = "*"
pyqtgraph = "*"
loguru = "*"
toml = "*"
ezodf = "*"
requests = "*"        # Required for Barion to download mass tables
fortranformat = "*"
[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
# Documentation dependencies
mkdocs = "*"
mkdocs-material = "*"
mkdocstrings = {extras = ["python"], version = "*"}
mkdocs-gen-files = "*"
mkdocs-literate-nav = "*"

[tool.poetry.scripts]
rionid = "rionid.gui.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"